--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ html {
 .header {
   color: #000;
   background-color: #00e676;
-  height: 40px;
+  height: 60px;
   font-size: 24px;
   position: fixed;
   width: 100%;
@@ -29,5 +29,5 @@ html {
 }
 
 #content {
-  padding-top: 40px;
+  padding-top: 60px;
 }
